Added all the relevant text for 009, 010, 011 and 012

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 <a name="videolist"></a><h2>VIDEO LIST</h2>
 <table class="w-full" style="vertical-align:middle">
 <tr><th>Video Code</th><th>Published</th><th>Phrasal verbs covered<br>and link to the video</th><th>Poster</th></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">012</span></td><td style="vertical-align:middle">06<span class="superscript">th</span> Dec</td><td style="vertical-align:middle"><a href="https://youtu.be/3nAw2BEPaIE">Dress up</a><br><a href="https://youtu.be/3nAw2BEPaIE">Give out</a><br><a href="https://youtu.be/3nAw2BEPaIE">Put up</a><br><a href="https://youtu.be/3nAw2BEPaIE">Wrap up</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/36QU1Yd" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 012"/></a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">011</span></td><td style="vertical-align:middle">28<span class="superscript">th</span> Nov</td><td style="vertical-align:middle"><a href="https://youtu.be/xWQWMWTGrHc">QUAD QUIZ TWO</a></td><td>No poster</td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">010</span></td><td style="vertical-align:middle">23<span class="superscript">rd</span> Nov</td><td style="vertical-align:middle"><a href="https://youtu.be/YvulEmorsz4">Check In</a><br><a href="https://youtu.be/YvulEmorsz4">See Off</a><br><a href="https://youtu.be/YvulEmorsz4">Set Off</a><br><a href="https://youtu.be/YvulEmorsz4">Take Off</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/35LCfFc" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 010"/></a></td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">009</span></td><td style="vertical-align:middle">14<span class="superscript">th</span> Nov</td><td style="vertical-align:middle"><a href="https://youtu.be/_Puq5X1BFQA">Run Across</a><br><a href="https://youtu.be/_Puq5X1BFQA">Run Down</a><br><a href="https://youtu.be/_Puq5X1BFQA">Run Out</a><br><a href="https://youtu.be/_Puq5X1BFQA">Run Over</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/2IwJqaZ" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 009"/></a></td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">008</span></td><td style="vertical-align:middle">07<span class="superscript">th</span> Nov</td><td style="vertical-align:middle"><a href="https://youtu.be/pPkILt2K6GI">Put Up With</a><br><a href="https://youtu.be/pPkILt2K6GI">Get Through</a><br><a href="https://youtu.be/pPkILt2K6GI">Deal With</a><br><a href="https://youtu.be/pPkILt2K6GI">Resign To</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/3k689jE" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 008"/></a></td></tr>
@@ -99,41 +101,50 @@
 <hr class="grey">
 <a name="playlists"></a><h2>PLAYLISTS</h2>
 <h4>THEMES</h4>
-<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32UgwRUvN_0NQA-Z4tt4KGe">Reference</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl329t1WApodrMH3pXbQoSgqT">Food</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl3343F4Lscy6HPyw2Z-Rr2KN">Relationships</a></p>
+<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32UgwRUvN_0NQA-Z4tt4KGe">Reference</a> . <a href="https://www.youtube.com/watch?v=h144R9H-Qkc&list=PLGjNwsRMbl32T4LFSX0PUCbEPR5bwt98j">Christmas</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl329t1WApodrMH3pXbQoSgqT">Food</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl3343F4Lscy6HPyw2Z-Rr2KN">Relationships</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32wafp4BjjTqkXn7JdpPUD5">Travel</a></p>
 <h4>YEAR PUBLISHED</h4>
 <p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl33sIzjcuvzKXkdCXB3n2fKF">2020</a></p>
-
-<h4>MAIN VERBS</h4>
-<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32lMrtfpChNxtZ4QQqBXzET">Turn</a></p>
 <hr class="grey">
 <a name="phrasalverbslist"></a><h2>PHRASAL VERBS LIST</h2>
 <p>Jump to a letter of the main verb:<br><a href="#A">A</a>  <a href="#B">B</a>  <a href="#C">C</a>  <a href="#D">D</a>  <a href="#E">E</a>  <a href="#F">F</a> <a href="#G">G</a>  <a href="#H">H</a>  <a href="#I">I</a>  <a href="#J">J</a>  <a href="#K">K</a>  <a href="#L">L</a>  <a href="#M">M</a>  <a href="#N">N</a>  <a href="#O">O</a>  <a href="#P">P</a>  <a href="#Q">Q</a>  <a href="#R">R</a>  <a href="#S">S</a>  <a href="#T">T</a>  <a href="#U">U</a>  <a href="#V">V</a>  <a href="#W">W</a>  <a href="#X">X</a>  <a href="#Y">Y</a>  <a href="#Z">Z</a>  </p> 
 <table class="w-full">
 <tr><th>VERB</th><th>BASIC DEFINTION</th><th>VIDEO LINK<br>& CODE</th></tr>
 <tr><td><a name="B"></a>Break up with</td><td><em>To stop being in a romantic relationship.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-<tr><td><a name="C"></a>Cut down on</td><td><em>To reduce the quantity of something.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><a name="C"></a>Check in</td><td><em>To register arrival.</em></td><td><a href="https://youtu.be/YvulEmorsz4">011</a></td></tr>
+<tr><td>Cut down on</td><td><em>To reduce the quantity of something.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td>Cut out</td><td><em>To remove something completely.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td><a name="D"></a>Deal with</td><td><em>To take action to do something, especially solve a problem.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
+<tr><td>Dress up</td><td><em>To wear formal clothes or a fancy-dress.</em></td><td><a href="https://youtu.be/3nAw2BEPaIE">012</a></td></tr>
 <tr><td><a name="E"></a>Eat out</td><td><em>To eat outside of the home, in a restaurant for example.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td><a name="F"></a>Fall out with</td><td><em>To stop being friends with or being friendly with somebody.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
 <tr><td>Figure out</td><td><em>To understand or solve a problem.</em></td><td><a href="https://youtu.be/NR6uvgMb1Gc">005</a></td></tr>
 <tr><td>Focus on</td><td><em>To concentrate on or put effort into something.</em></td><td><a href="https://youtu.be/NR6uvgMb1Gc">005</a></td></tr>
 <tr><td><a name="G"></a>Get on with</td><td><em>To have a good or friendly relationship with somebody.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
 <tr><td>Get through</td><td><em>To experience and survive a difficult situation.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
+<tr><td>Give out</td><td><em>To distribute something, often documents or presents.</em></td><td><a href="https://youtu.be/3nAw2BEPaIE">012</a></td></tr>
 <tr><td><a name="L"></a>Live on</td><td><em>To consume mostly one type of food.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td>Look down on</td><td><em>To feel superior to somebody.</em></td><td><a href="https://youtu.be/_aHY30FL3aI">007</a></td></tr>
 <tr><td>Look forward to</td><td><em>To anticpate the future with pleasure or excitement.</em></td><td><a href="https://youtu.be/_aHY30FL3aI">007</a></td></tr>
 <tr><td>Look up to</td><td><em>To admire or respect.</em></td><td><a href="https://youtu.be/_aHY30FL3aI">007</a></td></tr>
 <tr><td>Look through</td><td><em>To review or search.</em></td><td><a href="https://youtu.be/_aHY30FL3aI">007</a></td></tr>
 <tr><td><a name="M"></a>Make up with</td><td><em>To become friends with or being friendly with somebody after a period of non-friendship.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-<tr><td><a name="P"></a>Put up with</td><td><em>To accept an unpleasant situation.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
+<tr><td><a name="P"></a>Put up</td><td><em>To place or display something.</em></td><td><a href="https://youtu.be/3nAw2BEPaIE">012</a></td></tr>
+<tr><td>Put up with</td><td><em>To accept an unpleasant situation.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
 <tr><td><a name="R"></a>Resign to</td><td><em>To accept a situation that can't be changed, probably a negative situation.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
+<tr><td>Run across</td><td><em>To encounter by chance, with no planning.</em></td><td><a href="https://youtu.be/_Puq5X1BFQA">009</a></td></tr>
+<tr><td>Run down</td><td><em>To say negative things about a person or thing.</em></td><td><a href="https://youtu.be/_Puq5X1BFQA">009</a></td></tr>
 <tr><td>Run into</td><td><em>To encounter by chance, with no planning.</em></td><td><a href="https://youtu.be/NR6uvgMb1Gc">005</a></td></tr>
-<tr><td><a name="S"></a>Sort out</td><td><em>To organise, filter or control.</em></td><td><a href="https://youtu.be/NR6uvgMb1Gc">005</a></td></tr>
-<tr><td><a name="T"></a>Turn down</td><td><em>To decrease the intensity, especially sound.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td>Run out</td><td><em>To use all of something.</em></td><td><a href="https://youtu.be/_Puq5X1BFQA">009</a></td></tr>
+<tr><td>Run over</td><td><em>To collide and then go over somebody or something.</em></td><td><a href="https://youtu.be/_Puq5X1BFQA">009</a></td></tr>
+<tr><td><a name="S"></a>See off</td><td><em>To go somewhere to say goodbye to somebody.</em></td><td><a href="https://youtu.be/YvulEmorsz4">011</a></td></tr>
+<tr><td>Set off</td><td><em>To begin a journey.</em></td><td><a href="https://youtu.be/YvulEmorsz4">011</a></td></tr>
+<tr><td>Sort out</td><td><em>To organise, filter or control.</em></td><td><a href="https://youtu.be/NR6uvgMb1Gc">005</a></td></tr>
+<tr><td><a name="T"></a>Take off</td><td><em>To leave the ground.</em></td><td><a href="https://youtu.be/YvulEmorsz4">011</a></td></tr>
+<tr><td>Turn down</td><td><em>To decrease the intensity, especially sound.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 <tr><td>Turn off</td><td><em>To stop a piece of equipment, for example electrical or plumbing.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 <tr><td>Turn on</td><td><em>To start a piece of equipment, for example electrical or plumbing.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 <tr><td>Turn up</td><td><em>To increase the intensity, especially sound.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td><a name="W"></a>Wrap up</td><td><em>To cover something, often with decorative paper.</em></td><td><a href="https://youtu.be/3nAw2BEPaIE">012</a></td></tr>
 </table>
 </r-cell>
 </r-grid>
@@ -156,6 +167,10 @@ videolinks[5]="https://youtu.be/NR6uvgMb1Gc";
 videolinks[6]="https://youtu.be/IcI049Yr63I";
 videolinks[7]="https://youtu.be/_aHY30FL3aI";
 videolinks[8]="https://youtu.be/pPkILt2K6GI";
+videolinks[9]="https://youtu.be/_Puq5X1BFQA";
+videolinks[10]="https://youtu.be/YvulEmorsz4";
+videolinks[11]="https://youtu.be/xWQWMWTGrHc";
+videolinks[12]="https://youtu.be/3nAw2BEPaIE";
 
 function randomvideo(){
 window.location=videolinks[Math.floor(Math.random()*videolinks.length)]
