--- a/pdf/index.html
+++ b/pdf/index.html
@@ -69,5 +69,5 @@ a:hover {
     <div class="err">4</div>
     <i class="far fa-question-circle fa-spin"></i>
     <div class="err2">4</div>
-    <div class="msg">Maybe this poster moved? Got deleted? Or is hiding out in quarantine? Perhaps, it never existed in the first place?<p>Let's go <a href="https://bettersquash.com">home</a> and try from there.</p></div>
+    <div class="msg">Maybe this poster moved? Got deleted? Or is hiding out in quarantine? Perhaps, it never existed in the first place?<p>Let's go <a href="https://4phrasalverbs.com">home</a> and try from there.</p></div>
       </div>
