--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <a name="videolist"></a><h2>VIDEO LIST</h2>
 <table class="w-full" style="vertical-align:middle">
 <tr><th>Video Code</th><th>Published</th><th>Phrasal verbs covered<br>and link to the video</th><th>Poster</th></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">013</span></td><td style="vertical-align:middle">11<span class="superscript">th</span> Dec</td><td style="vertical-align:middle"><a href="https://youtu.be/AezPmQEQt00">Catch up</a><br><a href="https://youtu.be/AezPmQEQt00">Give up</a><br><a href="https://youtu.be/AezPmQEQt00">See through</a><br><a href="https://youtu.be/AezPmQEQt00">Take up</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/3qIQkvo">013 Poster</td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">012</span></td><td style="vertical-align:middle">06<span class="superscript">th</span> Dec</td><td style="vertical-align:middle"><a href="https://youtu.be/3nAw2BEPaIE">Dress up</a><br><a href="https://youtu.be/3nAw2BEPaIE">Give out</a><br><a href="https://youtu.be/3nAw2BEPaIE">Put up</a><br><a href="https://youtu.be/3nAw2BEPaIE">Wrap up</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/36QU1Yd" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 012"/></a></td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">011</span></td><td style="vertical-align:middle">28<span class="superscript">th</span> Nov</td><td style="vertical-align:middle"><a href="https://youtu.be/xWQWMWTGrHc">QUAD QUIZ TWO</a></td><td>No poster</td></tr>
 <tr><td style="vertical-align:middle"><span style="color: #124292;">010</span></td><td style="vertical-align:middle">23<span class="superscript">rd</span> Nov</td><td style="vertical-align:middle"><a href="https://youtu.be/YvulEmorsz4">Check In</a><br><a href="https://youtu.be/YvulEmorsz4">See Off</a><br><a href="https://youtu.be/YvulEmorsz4">Set Off</a><br><a href="https://youtu.be/YvulEmorsz4">Take Off</a></td><td style="vertical-align:middle" ><a href="https://bit.ly/35LCfFc" ><img width="60" src="pdf-icon-512.png" alt="Learn English Phrasal Verbs: Poster 010"/></a></td></tr>
@@ -101,7 +102,7 @@
 <hr class="grey">
 <a name="playlists"></a><h2>PLAYLISTS</h2>
 <h4>THEMES</h4>
-<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32UgwRUvN_0NQA-Z4tt4KGe">Reference</a> . <a href="https://www.youtube.com/watch?v=h144R9H-Qkc&list=PLGjNwsRMbl32T4LFSX0PUCbEPR5bwt98j">Christmas</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl329t1WApodrMH3pXbQoSgqT">Food</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl3343F4Lscy6HPyw2Z-Rr2KN">Relationships</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32wafp4BjjTqkXn7JdpPUD5">Travel</a></p>
+<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32UgwRUvN_0NQA-Z4tt4KGe">Reference</a> . <a href="https://www.youtube.com/watch?v=h144R9H-Qkc&list=PLGjNwsRMbl32T4LFSX0PUCbEPR5bwt98j">Christmas</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl329t1WApodrMH3pXbQoSgqT">Food</a> . <a href="https://www.youtube.com/watch?v=AezPmQEQt00&list=PLGjNwsRMbl30IwYMgaNozEdgR_ktNFpLc">New Year's Resolutions</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl3343F4Lscy6HPyw2Z-Rr2KN">Relationships</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32wafp4BjjTqkXn7JdpPUD5">Travel</a></p>
 <h4>YEAR PUBLISHED</h4>
 <p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl33sIzjcuvzKXkdCXB3n2fKF">2020</a></p>
 <hr class="grey">
@@ -110,7 +111,8 @@
 <table class="w-full">
 <tr><th>VERB</th><th>BASIC DEFINTION</th><th>VIDEO LINK<br>& CODE</th></tr>
 <tr><td><a name="B"></a>Break up with</td><td><em>To stop being in a romantic relationship.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
-<tr><td><a name="C"></a>Check in</td><td><em>To register arrival.</em></td><td><a href="https://youtu.be/YvulEmorsz4">011</a></td></tr>
+<tr><td><a name="C"></a>Catch up</td><td><em>To talk to someone you have not seen for some time and find out what they have been doing.</em></td><td><a href="https://youtu.be/AezPmQEQt00">013</a></td></tr>
+<tr><td>Check in</td><td><em>To register arrival.</em></td><td><a href="https://youtu.be/YvulEmorsz4">011</a></td></tr>
 <tr><td>Cut down on</td><td><em>To reduce the quantity of something.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td>Cut out</td><td><em>To remove something completely.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td><a name="D"></a>Deal with</td><td><em>To take action to do something, especially solve a problem.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
@@ -122,6 +124,7 @@
 <tr><td><a name="G"></a>Get on with</td><td><em>To have a good or friendly relationship with somebody.</em></td><td><a href="https://youtu.be/Ug2EKbfZWAA">004</a></td></tr>
 <tr><td>Get through</td><td><em>To experience and survive a difficult situation.</em></td><td><a href="https://youtu.be/pPkILt2K6GI">008</a></td></tr>
 <tr><td>Give out</td><td><em>To distribute something, often documents or presents.</em></td><td><a href="https://youtu.be/3nAw2BEPaIE">012</a></td></tr>
+<tr><td>Give up</td><td><em>To stop doing something that you do regularly.</em></td><td><a href="https://youtu.be/AezPmQEQt00">013</a></td></tr>
 <tr><td><a name="L"></a>Live on</td><td><em>To consume mostly one type of food.</em></td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td>Look down on</td><td><em>To feel superior to somebody.</em></td><td><a href="https://youtu.be/_aHY30FL3aI">007</a></td></tr>
 <tr><td>Look forward to</td><td><em>To anticpate the future with pleasure or excitement.</em></td><td><a href="https://youtu.be/_aHY30FL3aI">007</a></td></tr>
@@ -137,9 +140,11 @@
 <tr><td>Run out</td><td><em>To use all of something.</em></td><td><a href="https://youtu.be/_Puq5X1BFQA">009</a></td></tr>
 <tr><td>Run over</td><td><em>To collide and then go over somebody or something.</em></td><td><a href="https://youtu.be/_Puq5X1BFQA">009</a></td></tr>
 <tr><td><a name="S"></a>See off</td><td><em>To go somewhere to say goodbye to somebody.</em></td><td><a href="https://youtu.be/YvulEmorsz4">011</a></td></tr>
+<tr><td>See through</td><td><em>To continue doing something until it is finished, especially something unpleasant or difficult.</em></td><td><a href="https://youtu.be/AezPmQEQt00">013</a></td></tr>
 <tr><td>Set off</td><td><em>To begin a journey.</em></td><td><a href="https://youtu.be/YvulEmorsz4">011</a></td></tr>
 <tr><td>Sort out</td><td><em>To organise, filter or control.</em></td><td><a href="https://youtu.be/NR6uvgMb1Gc">005</a></td></tr>
 <tr><td><a name="T"></a>Take off</td><td><em>To leave the ground.</em></td><td><a href="https://youtu.be/YvulEmorsz4">011</a></td></tr>
+<tr><td>Take up</td><td><em>To start doing something regularly as a habit, job, or interest.</em></td><td><a href="https://youtu.be/AezPmQEQt00">013</a></td></tr>
 <tr><td>Turn down</td><td><em>To decrease the intensity, especially sound.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 <tr><td>Turn off</td><td><em>To stop a piece of equipment, for example electrical or plumbing.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 <tr><td>Turn on</td><td><em>To start a piece of equipment, for example electrical or plumbing.</em></td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
