--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 <link rel="stylesheet" href="4phrasalverbs.css">
 </head>
 <body>
-<h1 class="xlarge single-line" style="color: #124292">4 PHRASAL<br>VERBS</h1>
 <r-grid columns="7">
 <r-cell span="1-2" span-s="row">
+<h1 class="single-line" style="color: #124292">4 PHRASAL<br>VERBS</h1>
 <a id="top"></a>
 <h4>SIMPLE. EFFECTIVE. FUN.</h4>
 <hr class="grey">
@@ -104,7 +104,16 @@
 <hr class="grey">
 <a name="playlists"></a><h2>PLAYLISTS</h2>
 <h4>THEMES</h4>
-<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32UgwRUvN_0NQA-Z4tt4KGe">Reference</a> . <a href="https://www.youtube.com/watch?v=h144R9H-Qkc&list=PLGjNwsRMbl32T4LFSX0PUCbEPR5bwt98j">Christmas</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl31B9XIazXtqTuS2YhMrjo6G">Education</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32n6QMf1zLWfdwpwx5isxq5T">Fitness</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl329t1WApodrMH3pXbQoSgqT">Food</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl30qEvSohm-7NJqW1FPxLeWr">Health</a> .  <a href="https://www.youtube.com/watch?v=AezPmQEQt00&list=PLGjNwsRMbl30IwYMgaNozEdgR_ktNFpLc">New Year's Resolutions</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl3343F4Lscy6HPyw2Z-Rr2KN">Relationships</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32wafp4BjjTqkXn7JdpPUD5">Travel</a></p>
+<p>
+<a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32UgwRUvN_0NQA-Z4tt4KGe">Reference</a> . 
+<a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32T4LFSX0PUCbEPR5bwt98j">Christmas</a> . 
+<a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl31B9XIazXtqTuS2YhMrjo6G">Education</a> . 
+<a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32n6QMf1zLWfdwpwx5isxq5">Fitness</a> . 
+<a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl329t1WApodrMH3pXbQoSgqT">Food</a> . 
+<a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl30qEvSohm-7NJqW1FPxLeWr">Health</a> .  
+<a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl30IwYMgaNozEdgR_ktNFpLc">New Year's Resolutions</a> . 
+<a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl3343F4Lscy6HPyw2Z-Rr2KN">Relationships</a> . 
+<a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32wafp4BjjTqkXn7JdpPUD5">Travel</a></p>
 <h4>YEAR PUBLISHED</h4>
 <p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl33sIzjcuvzKXkdCXB3n2fKF">2020</a></p>
 <hr class="grey">
